--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -22,7 +22,12 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
+          sudo -E apt-get -qq remove --purge azure-cli ghc zulu* hhvm llvm* firefox google* dotnet* powershell mysql* php* mssql-tools msodbcsql17 android*
           curl -s https://build-scripts.immortalwrt.eu.org/init_build_environment.sh | sudo bash
+          sudo -E apt-get -qq autoremove --purge
+          sudo -E apt-get -qq clean
+          sudo -E swapoff -a
+          sudo -E rm -rf /swapfile
 
       - name: Clone Source
         run: |
@@ -45,7 +50,7 @@ jobs:
 
       - name: After Build
         run: |
-          bash /home/runner/openwrt/after_build.sh
+          bash ${GITHUB_WORKSPACE}/after_build.sh
 
       - name: Upload Packages
         uses: actions/upload-artifact@v2
