--- a/.config
+++ b/.config
@@ -10,3 +10,5 @@ CONFIG_PACKAGE_luci-app-uugamebooster=y
 
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_ipv6helper=y
+
+CONFIG_PACKAGE_cfdisk=y
