--- a/.config
+++ b/.config
@@ -1,6 +1,10 @@
-CONFIG_TARGET_KERNEL_PARTSIZE=160
+CONFIG_TARGET_KERNEL_PARTSIZE=512
 CONFIG_TARGET_ROOTFS_PARTSIZE=2048
+CONFIG_VDI_IMAGES=y
+CONFIG_VHDX_IMAGES=y
 CONFIG_VMDK_IMAGES=y
+# CONFIG_TARGET_ROOTFS_TARGZ is not set
+# CONFIG_GRUB_IMAGES is not set
 
 CONFIG_PACKAGE_luci-app-upnp=y
 
@@ -9,6 +13,8 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-uugamebooster=y
 
 CONFIG_PACKAGE_luci-app-passwall=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
+
 CONFIG_PACKAGE_ipv6helper=y
 
 CONFIG_PACKAGE_cfdisk=y
