feat: 使用 master 分支

--- a/.config
+++ b/.config
@@ -6,6 +6,10 @@ CONFIG_VMDK_IMAGES=y
 # CONFIG_TARGET_ROOTFS_TARGZ is not set
 # CONFIG_GRUB_IMAGES is not set
 
+CONFIG_PACKAGE_kmod-iavf=y
+
+CONFIG_PACKAGE_pciutils=y
+
 CONFIG_PACKAGE_luci-app-upnp=y
 
 CONFIG_PACKAGE_luci-app-autoreboot=y
