--- a/.config
+++ b/.config
@@ -1,6 +1,9 @@
 CONFIG_TARGET_KERNEL_PARTSIZE=512
 CONFIG_TARGET_ROOTFS_PARTSIZE=2048
 CONFIG_VMDK_IMAGES=y
+# CONFIG_GRUB_IMAGES is not set
+# CONFIG_TARGET_ROOTFS_EXT4FS is not set
+# CONFIG_TARGET_ROOTFS_TARGZ is not set
 
 CONFIG_PACKAGE_kmod-iavf=y
 
