--- a/.config
+++ b/.config
@@ -7,6 +7,9 @@ CONFIG_VMDK_IMAGES=y
 
 CONFIG_PACKAGE_kmod-iavf=y
 
+CONFIG_PACKAGE_iptables-nft=y
+CONFIG_PACKAGE_ip6tables-nft=y
+
 CONFIG_PACKAGE_pciutils=y
 CONFIG_PACKAGE_open-vm-tools=y
 CONFIG_PACKAGE_ipv6helper=y
