--- a/.config
+++ b/.config
@@ -20,4 +20,6 @@ CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 
+CONFIG_PACKAGE_luci-app-ddns=y
+
 CONFIG_PACKAGE_luci-app-passwall=y
