--- a/.config
+++ b/.config
@@ -21,5 +21,6 @@ CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 
 CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_ddns-scripts-cloudflare=y
 
 CONFIG_PACKAGE_luci-app-passwall=y
