--- a/.config
+++ b/.config
@@ -16,6 +16,7 @@ CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_default-settings-chn=y
 
 CONFIG_PACKAGE_luci-app-upnp=y
+CONFIG_PACKAGE_luci-app-udpxy=y
 
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
