--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -5,8 +5,8 @@ on:
   push:
     branches:
       - master
-  schedule:
-    - cron: 0 16 * * *
+#  schedule:
+#    - cron: 0 16 * * *
 
 jobs:
   build:
@@ -18,16 +18,32 @@ jobs:
       - name: Clone Repository
         uses: actions/checkout@v2
 
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          # this might remove tools that are actually needed,
+          # if set to "true" but frees about 6 GB
+          tool-cache: false
+  
+          # all of these default to true, but feel free to set to
+          # "false" if necessary for your workflow
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: true
+          swap-storage: true
+
       - name: Init Compilation Dependencies
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
-          sudo -E apt-get -qq remove --purge ghc zulu* llvm* firefox google* dotnet* powershell mysql* php* mssql-tools msodbcsql17 android*
-          sudo -E apt-get -qq autoremove --purge
-          sudo -E apt-get -qq clean
-          sudo -E swapoff -a
-          sudo -E rm -rf /usr/share/dotnet /etc/mysql /etc/php /usr/local/lib/android /opt/ghc /swapfile
-          sudo bash -c 'bash <(curl -sL https://build-scripts.immortalwrt.eu.org/init_build_environment.sh)'
+          curl -sL https://build-scripts.immortalwrt.eu.org/init_build_environment.sh | sudo bash
+
+      - name: Check space
+        if: (!cancelled())
+        run: df -hT
+
       - name: Clone Source
         run: |
           cd /home/runner
@@ -45,20 +61,20 @@ jobs:
           cp ${GITHUB_WORKSPACE}/.config /home/runner/openwrt
           make defconfig
           cat .config
-          make -j$[$(nproc)+1] || make -j1 V=sc
+          make -j$[$(nproc)+1]
 
       - name: After Build
         run: |
           bash ${GITHUB_WORKSPACE}/after_build.sh
 
       - name: Upload Packages
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: Packages
           path: /home/runner/openwrt/bin/packages/
 
       - name: Upload Firmwares
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: Firmwares
           path: /home/runner/openwrt/bin/targets/
